# SagaChat

./: .gitignore  AI-UI.md  CLAUDE.md  CharacterCreationPrototype.md  LICENSE  MyChatWithClaude.md  PHASE_01_MODULE_CLEANUP.md  PHASE_02_SCREEN_CLEANUP.md  PHASE_03_CHARACTER_DATA_LAYER.md  PHASE_04_INFERENCE_LAYER.md  PHASE_05_VIEWMODELS.md  PHASE_06_SCAFFOLD_NAV_WIRING.md  PHASE_07_UI_CHARACTER_LIST.md  PHASE_08_UI_CHARACTER_CREATE.md  README.md  TODO.md  build.gradle.kts  gradle.properties  local.properties  memory.md  original_service.kt  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml
ai-core/: build.gradle.kts
ai-core/src/androidTest/java/com/mp/ai_core/: ExampleInstrumentedTest.kt
ai-core/src/main/cpp/: CMakeLists.txt  ai_core.cpp  cpu_helper.cpp  cpu_helper.h
ai-core/src/main/java/com/mp/ai_core/: NativeLib.kt  SuperModelWorker.kt
ai-core/src/test/java/com/mp/ai_core/: ExampleUnitTest.kt
ai-engine/: build.gradle.kts
ai-engine/src/androidTest/java/com/mp/ai_engine/: ExampleInstrumentedTest.kt
ai-engine/src/test/java/com/mp/ai_engine/: ExampleUnitTest.kt
ai-manager/: build.gradle.kts  proguard-rules.pro
ai-manager/src/main/assets/: tools.json
ai-module/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ai-module/src/androidTest/java/com/dark/ai_module/: ExampleInstrumentedTest.kt
ai-module/src/test/java/com/dark/ai_module/: ExampleUnitTest.kt
app/: build.gradle.kts  proguard-rules.pro
app/libs/: ai-core-release.aar
app/src/androidTest/java/com/dark/tool_neuron/: ExtraHardeningTest.kt  PhaseFourDepthTest.kt  PhaseOneSecurityTest.kt  PhaseThreeHardeningTest.kt  PhaseTwoIntegrityTest.kt  PrefsPersistenceTest.kt  ResilienceTest.kt
app/src/androidTest/java/com/moorixlabs/sagachat/: ExampleInstrumentedTest.kt  ExtraHardeningTest.kt  PhaseFourDepthTest.kt  PhaseOneSecurityTest.kt  PhaseThreeHardeningTest.kt  PhaseTwoIntegrityTest.kt  PrefsPersistenceTest.kt  ResilienceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: STYLE.md  server_docs.html  server_webui.html
app/src/main/java/com/dark/neuroverse/: NVApplication.kt  NeuroVerseApplication.kt
app/src/main/java/com/dark/tool_neuron/: NVApplication.kt  TNApplication.kt
app/src/main/java/com/moorixlabs/sagachat/: TNApplication.kt
app/src/main/res/drawable/: database_zap.xml  regen.xml  tools.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_config.xml  island_accessibility_service.xml
data-hub-lib/: build.gradle.kts  proguard-rules.pro
data-hub-lib/src/main/cpp/: CMakeLists.txt  data_hub_lib.cpp
data-hub-lib/src/main/cpp/libs/: aes.h
docs/: TOOL_CALLING_SDK_GUIDE.md  USER-Memory.MD
docs/plans/: 2026-03-03-ums-migration-plan.md  2026-03-03-ums-storage-migration-design.md  2026-03-06-ui-overhaul-design.md  2026-03-06-ui-overhaul.md  2026-03-08-ui-standardization-design.md  2026-03-09-production-hardening.md
download_manager/: README.md  build.gradle.kts  consumer-rules.pro
download_manager/src/main/: AndroidManifest.xml
download_manager/src/main/cpp/: CMakeLists.txt  download_engine.cpp  download_engine.h  download_manager.cpp  download_task.h  persistence.cpp  persistence.h
download_manager/src/main/res/drawable/: download_icon.xml
file_ops/src/main/cpp/: CMakeLists.txt  file_ops.cpp
file_ops/src/main/java/com/dark/file_ops/: FileOps.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hxs/: README.md  build.gradle.kts  consumer-rules.pro
hxs/src/main/cpp/: CMakeLists.txt  collection.cpp  collection.h  hxs.cpp  index.cpp  index.h  manifest.cpp  manifest.h  rag_keyword.cpp  rag_keyword.h  wal.cpp  wal.h  wire_format.cpp  wire_format.h
hxs_encryptor/: README.md  build.gradle.kts  consumer-rules.pro
hxs_encryptor/src/main/cpp/: CMakeLists.txt  argon2.cpp  argon2.h  auth.cpp  auth.h  boot_integrity.cpp  boot_integrity.h  crypto_engine.cpp  crypto_engine.h  hxs_encryptor.cpp  integrity.cpp  integrity.h  memory_guard.cpp  memory_guard.h  policy_engine.cpp  policy_engine.h  pq_kem.cpp  pq_kem.h  pq_sign.cpp  pq_sign.h  xor_str.h
libs/: ai_supertonic_tts-release.aar  plugin-api-release.aar  runanywhere-kotlin-release.aar  tn_security-release.aar
memory-vault/: build.gradle.kts
memory-vault/src/main/java/com/memoryvault/: MemoryVault.kt
n_apps/: build.gradle.kts
n_apps/src/main/cpp/: CMakeLists.txt  n_apps.cpp
networking/: build.gradle.kts  consumer-rules.pro
networking/src/main/cpp/: CMakeLists.txt  ddg_client.cpp  ddg_client.h  html_extract.cpp  http_curl.cpp  net_jni.cpp  networking.cpp
neuron-packet/: build.gradle.kts
neuron-packet/src/main/cpp/: CMakeLists.txt
neuron-packet/src/main/java/com/neuronpacket/: Models.kt  NeuronPacketManager.kt  NeuronPacketNative.kt
plugin-api/: build.gradle.kts  consumer-rules.pro
plugin-exc/: build.gradle.kts  consumer-rules.pro
plugin-exc/src/main/: AndroidManifest.xml
plugins/: build.gradle.kts  consumer-rules.pro  export.gradle.kts  proguard-rules.pro
plugins/counter/: build.gradle.kts  manifest.json
plugins/counter/src/main/: AndroidManifest.xml
plugins/expense/: build.gradle.kts  manifest.json
plugins/notes/: build.gradle.kts  manifest.json
plugins/src/main/python/: universal_reader.py
repo/: AppUpdate.json  Script
smollm/: .gitignore  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
smollm/src/main/: AndroidManifest.xml
smollm/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  smollm.cpp
system_encryptor/src/main/cpp/: CMakeLists.txt
task-manager/: build.gradle.kts
ums/src/main/cpp/: CMakeLists.txt
updateManager/: build.gradle.kts
updateManager/src/main/res/drawable/: attachment.xml  copy.xml  menu.xml  new_action.xml  new_chat.xml  send_chat.xml
updateManager/src/main/res/values/: themes.xml
updateManager/src/main/res/xml/: file_paths.xml
user-data/: build.gradle.kts
userData/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
vosk/: build.gradle.kts
vosk/src/main/assets/vosk-model-small-en-in-0.4/: uuid
web/: main.html
(+1070 files in other folders)
